# RayTracingRenderer

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  camera.h  color.h  commons.h  compile_commands.json  export.bat  hittable.h  hittable_list.h  image.ppm  interval.h  main.cpp  material.h  package-lock.json  ray.h  rtweekend.h  sphere.h  vec3.h
.cache/clangd/index/: color.h.11ED3A4C3D8EC6CB.idx  main.cpp.D821403D2DD9EFA1.idx  vec3.h.52C1B654D9832A07.idx
